--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,163 @@
 /* IMPOSTAZIONI GENERALI */
-
+body {
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+  background-image: url(../img/sfondo.png);
+  font-size: 22px;
+}
 /* HEADER */
+.container {
+  width: 400px;
+  background-color: rgb(0, 133, 173);
+  margin: 25px auto;
+  padding: 25px;
+  -webkit-box-shadow: 4px 5px 19px -4px #000000;
+  -moz-box-shadow: 4px 5px 19px -4px #000000;
+  -o-box-shadow: 4px 5px 19px -4px #000000;
+  box-shadow: 4px 5px 19px -4px #000000;
+}
+
+header img {
+  width: 300px;
+  margin-bottom: 25px;
+}
+
+.container > p {
+  margin: 10px;
+  font-size: 20px;
+  font-weight: 600;
+  color: white;
+}
+
+nav {
+  margin: 20px;
+  font-size: 18px;
+  font-weight: 500;
+  color: white;
+}
+
+nav a {
+  padding: 3px;
+  color: white;
+  text-decoration: none;
+}
 
 /* MAIN */
-
+article {
+  width: 410px;
+  background-color: rgb(255, 255, 255);
+  margin: 25px auto;
+  padding: 0px 20px;
+  line-height: 30px;
+  -webkit-box-shadow: 4px 5px 19px -4px #000000;
+  -moz-box-shadow: 4px 5px 19px -4px #000000;
+  -o-box-shadow: 4px 5px 19px -4px #000000;
+  box-shadow: 4px 5px 19px -4px #000000;
+}
 /* ELEMENTI NEL MAIN - ARTICLE */
+.title > h1 {
+  font-size: 35px;
+  font-weight: 500;
+  text-align: left;
+  padding-top: 30px;
+  line-height: 45px;
+}
+
+.title > p {
+  font-size: 18px;
+  color: grey;
+  padding: 30px 0;
+}
+
+.par_1 {
+  text-align: left;
+}
+
+#last_child {
+  margin: 25px 0;
+}
+
+strong {
+  font-weight: 500;
+  color: purple;
+}
+
+.list {
+  text-align: left;
+  margin-left: 41px;
+}
+
+code {
+  background-color: rgba(128, 128, 128, 0.288);
+  border: 1px solid grey;
+  border-radius: 5px;
+}
+
+.par_2 {
+  text-align: left;
+}
+
+.par_2 > p {
+  margin: 25px 0;
+}
+
+.container_tab {
+  margin-top: 30px;
+}
+
+.container_tab > p {
+  text-align: left;
+  margin-bottom: 25px;
+}
 
 /* TABELLE */
+caption {
+  font-style: italic;
+  font-weight: 700;
+}
 
+th {
+  color: white;
+  border: 1px solid grey;
+  padding: 15px;
+  background-color: rgb(32, 110, 255);
+}
+
+.white {
+  color: rgb(0, 0, 0);
+  border-top: 1px solid grey;
+  padding: 15px;
+  background-color: rgb(255, 255, 255);
+}
+
+.grey {
+  color: rgb(0, 0, 0);
+  border-top: 1px solid grey;
+  padding: 15px;
+  background-color: rgb(224, 224, 224);
+}
+
+.white.row {
+  border-bottom: 2px solid rgb(32, 110, 255);
+}
+
+.container_par {
+  text-align: left;
+  margin: 35px 0;
+}
+
+.container_par a {
+  color: rgb(21, 150, 255);
+}
+
+iframe {
+  width: 410px;
+  height: 220px;
+  border-radius: 20px;
+  margin-bottom: 25px;
+}
 /* FORM */
 
 /* ELEMENTI NELL' ASIDE */
 
-/* FOOTER */
+/* FOOTER */ ;
