--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,12 @@ body {
 /* HEADER */
 .container {
   width: 400px;
-  background-color: rgb(0, 133, 173);
+  background: rgb(0, 78, 101);
+  background: linear-gradient(
+    0deg,
+    rgba(0, 78, 101, 1) 0%,
+    rgba(0, 133, 173, 1) 100%
+  );
   margin: 25px auto;
   padding: 25px;
   -webkit-box-shadow: 4px 5px 19px -4px #000000;
@@ -40,6 +45,10 @@ nav a {
   padding: 3px;
   color: white;
   text-decoration: none;
+}
+
+nav > p {
+  margin: 5px;
 }
 
 /* MAIN */
